```plaintext refactor: remove Spigot dependencies and refactor session handling (main)
- Removed SpigotScheduler and related security classes.
- Deleted security annotations: EnableSpigotSecurity, OpOnly, and PlayerOnly.
- Removed PluginSecurityAspectContextBootstrapper and SecurityAspect.
- Deleted DefaultSessionService and PlayerSessionContextBootstrapper.
- Removed SynchronizeAspect and SynchronizeAspectContextBootstrapper.
- Deleted utility classes: CommandUtils, EventUtil, Message, and SenderUtils.
- Renamed PlayerSession to SenderSession and made it abstract.
- Introduced QuartzApplication and QuartzPlugin for non-Spigot use.
- Updated PropertyContextBootstrapper and DefaultPropertySourceFactory.
- Minor improvements and refactoring across the codebase.

refactor!: remove deprecated classes and refactor core components (main)

- Removed deprecated classes related to application context, command, event,
  and listener handling.
- Refactored core components such as `QuartzContext`, `EventPublisher`, and
  `ListenerFactory` to improve modularity and maintainability.
- Updated `ConvertContextBootstrapper` and `BeanContextBootstrapper` to use
  new context lifecycle annotations.
- Renamed `PluginContext` to `QuartzContext` and `AbstractPluginContext` to
  `AbstractQuartzContext`.
- Simplified the command handling mechanism by modifying `CommandService`
  interface and removing `DefaultCommandExecutor`.
- Improved lifecycle management by consolidating lifecycle methods in
  `PluginBeanDefinition`.
- Replaced `PermissionDeniedException` with a runtime exception.
```